[package]
name = "quickscreen"
version = "0.1.0"
edition = "2024"

[dependencies]
ashpd = { version = "0.12.0", default-features = false ,features=["async-std"]}
gstreamer = "0.24.1"
gstreamer-app = "0.24.0"
gstreamer-video = "0.24.1"
libadwaita = {version="0.8.0", features=["v1_6"]}
pipewire = "0.8.0"
pollster = "0.4.0"
rand = "0.9.2"
